[gd_scene load_steps=5 format=2]

[ext_resource path="res://ValueEdit.gd" type="Script" id=1]
[ext_resource path="res://dropdown_arrow.png" type="Texture" id=2]
[ext_resource path="res://CurveEdit.tscn" type="PackedScene" id=3]

[sub_resource type="ImageTexture" id=1]

flags = 0
storage = 0
lossy_quality = 0.7
flags = 0
size = Vector2( 16, 16 )

[node name="ValueEdit" type="MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 202.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4
script = ExtResource( 1 )
_sections_unfolded = [ "Custom Constants", "Margin", "Rect", "custom_constants" ]

[node name="VBoxContainer" type="GridContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 4.0
margin_right = 194.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 182.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="PropertyName" type="Label" parent="VBoxContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 38.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Name"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_right = 70.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 28.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 9
size_flags_vertical = 9
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
icon = ExtResource( 2 )
flat = true
align = 1
items = [ "Value", null, 0, false, false, -1, 0, null, "", false, "Value Range", null, 0, false, false, -1, 0, null, "", false, "Curve", null, 0, false, false, -1, 0, null, "", false ]
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Value" type="HBoxContainer" parent="VBoxContainer"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 222.0
margin_right = 440.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Size Flags" ]

[node name="ConstValue" type="SpinBox" parent="VBoxContainer/Value"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 218.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]
__meta__ = {
"_editor_icon": SubResource( 1 )
}

[node name="ValueRange" type="GridContainer" parent="VBoxContainer"]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_right = 360.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
columns = 4
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="VBoxContainer/ValueRange"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 24.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "KEY_MIN_VALUE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MinValue" type="SpinBox" parent="VBoxContainer/ValueRange"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 102.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Label2" type="Label" parent="VBoxContainer/ValueRange"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 106.0
margin_top = 5.0
margin_right = 132.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "KEY_MAX_VALUE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MaxValue" type="SpinBox" parent="VBoxContainer/ValueRange"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_right = 210.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Curve" type="GridContainer" parent="VBoxContainer"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_right = 440.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 1
_sections_unfolded = [ "Size Flags" ]

[node name="CurveEdit" parent="VBoxContainer/Curve" instance=ExtResource( 3 )]
margin_right = 366.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Rect", "Size Flags", "font", "test" ]

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Curve"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 366.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 8
custom_constants/margin_left = 0
custom_constants/margin_bottom = 8
_sections_unfolded = [ "Custom Constants", "Visibility" ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Curve/MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 366.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="VBoxContainer/Curve/MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 102.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "KEY_MIN_VALUE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MinValue" type="SpinBox" parent="VBoxContainer/Curve/MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 106.0
margin_right = 180.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""

[node name="Label2" type="Label" parent="VBoxContainer/Curve/MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 184.0
margin_top = 5.0
margin_right = 288.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "KEY_MAX_VALUE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MaxValue" type="SpinBox" parent="VBoxContainer/Curve/MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 292.0
margin_right = 366.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""

[connection signal="value_changed" from="VBoxContainer/Value/ConstValue" to="." method="_on_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ValueRange/MinValue" to="." method="_on_min_max_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ValueRange/MaxValue" to="." method="_on_min_max_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Curve/MarginContainer/HBoxContainer/MinValue" to="." method="_on_MinValue_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Curve/MarginContainer/HBoxContainer/MaxValue" to="." method="_on_MaxValue_value_changed"]
